# smd

./: .clang-format  .gitignore  README.md
doc/: smd.md
examples/: CMakeLists.txt  build.bat  build.sh
examples/1_create_session/: CMakeLists.txt  main.cpp  test_hash.h  test_list.h  test_map.h  test_pair.h  test_pointer.h  test_string.h  test_vector.h
examples/1_function_test/: CMakeLists.txt  main.cpp  test_hash.h  test_list.h  test_map.h  test_pointer.h  test_string.h  test_vector.h  util.h
examples/2_log/: CMakeLists.txt  main.cpp
examples/2_string_op/: CMakeLists.txt
examples/3_game_and_db/: CMakeLists.txt
examples/3_game_and_db/db/: CMakeLists.txt  main.cpp  main_db.cpp  main_db.h
examples/3_game_and_db/def/: data_def.xml
examples/3_game_and_db/game/: CMakeLists.txt  main.cpp  main_game.cpp  main_game.h
examples/3_game_and_db/server_common/: server_common_def.h
include/: sm_env.h  smd.h  smd_alloc.h  smd_defines.h  smd_hash.h  smd_list.h  smd_vector.h
include/common/: log.h  shm_defines.h  slice.h  smd_defines.h  utility.h
include/container/: base_obj.hpp  functional.h  hash.h  hash.hpp  iterator.h  list.h  list.hpp  map.h  map.hpp  pair.h  pod.hpp  reverse_iterator.h  shm_defines.h  shm_hash.h  shm_list.h  shm_map.h  shm_obj.h  shm_pair.h  shm_pointer.h  shm_string.h  shm_vector.h  string.h  string.hpp  vector.hpp
include/mem_alloc/: alloc.h  alloc.hpp  buddy.h  buddy.hpp  shm_handle.h  shm_linux.h  shm_win.h
include/share_mem/: shm.h  shm_handle.h  shm_linux.h  shm_win.h
